refactor for conditional

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       <h3>Quiz Option</h3>
       <form id="quiz-form">
         <p>If I wanted to change the color of the header I would use the CSS property background-color.</p>
-        <label for="true">True</label>
-        <input name="true" type="radio" value="true">
-        <label for="false">False</label>
-        <input name="false" type="radio" value="false">
+        <label for="answer">True</label>
+        <input name="answer" type="radio" value="true">
+        <label for="answer">False</label>
+        <input name="answer" type="radio" value="false">
         <button>Submit Guess</button>
       </form>
       <p id="result-true" class="hidden">Correct!</p>
